...
        android:id="@+id/calendar_invite_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- Content area -->
    <com.fsck.k9.view.MessageWebView
        android:id="@+id/message_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/outer_margin"
        android:layout_marginEnd="@dimen/outer_margin" />

    <!-- Unsigned content area -->
...
