...
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="?attr/colorPrimaryDark" />

            <TextView
                android:id="@+id/first_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="?attr/defaultToolbarTextColor"
                android:textSize="24sp"
                tools:text="B" />
...
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingTop="16dp"
            tools:text="android.studio@android.com" />

        <security.planck.ui.nav_view.NavFolderAccountButton
            android:id="@+id/navFoldersAccountsButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:padding="4dp"
...
