...
    <string name="status_syncing_off">Syncing disabled</string>
    <string name="status_syncing">Syncing messages</string>
    <string name="actionbar_selected"><xliff:g id="selection_count">%d</xliff:g> selected</string>
    <string name="next_action">Next</string>
    <string name="previous_action">Previous</string>
    <!-- Used to confirm acceptance of dialog boxes, warnings, errors, etc. -->
    <string name="okay_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="send_action">Send</string>
    <string name="send_again_action">Send Again</string>
    <string name="empty_subject">Subject is empty, click again to send anyway</string>
    <string name="select_action">Select</string>
    <string name="deselect_action">Deselect</string>
...
    <string name="messagelist_sent_cc_me_sigil">›</string>
    <string name="import_export_action">Settings Import &amp; Export</string>
    <string name="settings_export_account">Export account settings</string>
    <string name="settings_export_all">Export settings and accounts</string>
    <string name="settings_import_dialog_title">Import</string>
    <string name="settings_export_dialog_title">Export</string>
    <string name="settings_import">Import settings</string>
    <string name="settings_import_selection">Import selection</string>
    <string name="settings_import_global_settings">Global settings</string>
    <string name="settings_exporting">Exporting settings…</string>
    <string name="settings_importing">Importing settings…</string>
    <string name="settings_import_scanning_file">Scanning file…</string>
    <string name="settings_export_success">Saved exported settings to <xliff:g id="filename">%s</xliff:g></string>
...
