...

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/navigation_accounts"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout android:id="@+id/add_account_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:visibility="gone"
        tools:visibility="visible">
...
